# sprinkler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  _main.cpp  aux.cpp  boolarray.cpp  chunk.hpp  cur_indicator.cpp  cur_indicator.hpp  dirlist.ui  domain.hpp  gene_worker.cpp  gene_worker.hpp  genetic  geom_restore.hpp  glabel.cpp  lubee  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow_gene.cpp  mycheckbox.cpp  mycheckbox.hpp  myslider.ui  myslider_d.cpp  myslider_i.cpp  qtw_notifier.hpp  rectview.hpp  rectwindow.hpp  rectwindow.ui  settings.toml  sprinkler.pro  watchlist.cpp  watchlist.hpp  windowd.hpp
dep_linux/: watcher.cpp  watcher.hpp  x_aux.cpp  x_aux.hpp
dep_win/: dragpos.hpp  watcher.cpp  watcher.hpp  winnotifier.cpp  winnotifier.hpp
dep_win/ghook/: CMakeLists.txt  cxx_options.cmake  main.cpp  wevent.hpp  wmutex.cpp
dep_win/ghook/ghook/: CMakeLists.txt  cxx_options.cmake  ghook.hpp  wevent.cpp  wevent.hpp  wmutex.cpp  wmutex.hpp
src/: aux.cpp  aux.hpp  boolarray.hpp  cache.hpp  checkbox_delegate.cpp  checkbox_delegate.hpp  checkbox_model.hpp  checkbox_proxy.cpp  checkbox_proxy.hpp  checkbox_sqlmodel.cpp  checkbox_sqlmodel.hpp  column_target.cpp  column_target.hpp  cur_indicator.cpp  database.cpp  database.hpp  database_sig.cpp  database_sig.hpp  db_aux.cpp  dbdir_if.hpp  dbimage_if.hpp  dbtag_if.hpp  dirlist.cpp  dirlist.hpp  dirlist.ui  domain.hpp  file.hpp  gene_param.hpp  gene_worker.cpp  gene_worker.hpp  geom_restore.cpp  geom_restore.hpp  glabel.cpp  glabel.hpp  idtype.hpp  imagedir_model.cpp  imagedir_model.hpp  imagedir_window.cpp  imagedir_window.hpp  imagedir_window.ui  (+72 more)
src/dep_linux/: clientwin.h  file.cpp  watcher.cpp  watcher.hpp
src/dep_win/: dragpos.cpp  file.cpp  watcher.cpp  watcher.hpp
src/dep_win/ghook/: cxx_options.cmake  names.hpp  names_impl.hpp  wevent.cpp  wmutex.hpp
src/dep_win/ghook/ghook/: main.cpp
src/place/: param.hpp  result.hpp  selected.hpp
src/sql/: error.cpp  error.hpp  findentry.hpp  getid_record.hpp  getvalue.hpp  insert.cpp  insert.hpp  make_conditional.hpp  query.cpp  query.hpp  skipone.hpp  transaction.hpp  value.cpp  value.hpp
src/widget/: colorframe.cpp  colorframe.hpp  cur_indicator.cpp  cur_indicator.hpp  entrycheckbox.cpp  entrycheckbox.hpp  entryslider.cpp  entryslider.hpp  entryslider.ui  entryslider_d.cpp  entryslider_d.hpp  entryslider_i.cpp  entryslider_i.hpp  entryspinbox.cpp  entryspinbox.hpp  geom_restore.hpp  gr_mainwindow.cpp  gr_mainwindow.hpp  gr_widget.cpp  gr_widget.hpp  imagelabel.cpp  imagelabel.hpp  obstacle.hpp  request.cpp  request.hpp  tagselector.cpp  tagselector.hpp  tagselector.ui
translation/: sprinkler_ja.ts
